--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ main{
     height: 150px;
     top: 89px;
     left: 655px;
+    display: none;
 }
 
 
@@ -66,6 +67,7 @@ main{
     width: 20px;
     height: auto;
     top: 240px;
+    display: none;
 }
 
 /* BRAÇOS */
@@ -75,6 +77,7 @@ main{
     top: 270px;
     width: 90px;
     height: auto;
+    display: none;
 }
 
 #bracod img{
@@ -83,6 +86,7 @@ main{
     top: 270px;
     width: 90px;
     height: auto;
+    display: none;
 }
 
 /* PERNAS */
@@ -92,6 +96,7 @@ main{
     left: 620px;
     width: 100px;
     height: auto; 
+    display: none;
 }
 
 #pernae img{
@@ -100,6 +105,7 @@ main{
     left: 740px;
     width: 100px;
     height: auto; 
+    display: none;
 }
 
 /* PALAVRAS */
@@ -118,13 +124,38 @@ main{
 
 }
 
-input{
+form{
     position: absolute;
     margin-left: 540px;
     margin-top: 405px;
     width: 250px;
     height: 20px;
-    border-radius: 5px;
-    color: black;
-    font-size: 13pt;
+   
+}
+
+form input{
+    border-radius: 15px 0 0 15px;
+    font-size: 12pt;
+    height: auto;
+    width: 80%;
+    text-align: center;
+}
+
+form #button{
+    background-color: gray;
+    border: 1px;
+    color: white;
+    cursor: pointer;
+    border-radius: 0 15px 15px 0;
+    font-size: 18pt;
+    height: auto;
+    width: 30%;
+}
+
+form #button a:hover{
+    background-color: firebrick;
+}
+
+.visivel{
+    display: block;
 }
